icon,splash,name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,14 @@ dependencies:
   flutter_inappwebview: ^5.7.2+3  
 
   permission_handler: ^10.2.0
+  geolocator: ^7.0.3
+
   url_launcher: ^6.1.11
   connectivity_plus: ^3.0.3
   percent_indicator: ^4.2.3
   lottie: ^2.5.0
+  share_plus: ^6.3.1
+
 
   # google_mobile_ads: ^2.3.0
   # facebook_audience_network: ^1.0.1
@@ -67,7 +71,7 @@ flutter_icons:
 flutter_native_splash:
   # background_image: "assets/images/backgroundsplash.png"
   color: "#ffffff"
-  image: 'assets/images/splash.png'
+  image: 'assets/images/icon.png'
   android: true
   ios: true
 
