--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
    <uses-permission android:name="android.permission.AUDIO_CAPTURE" /> -->
    <!-- Add more permission entries as needed -->
    <application
-        android:label="Naija Chef Hub"
+        android:label="Daman Games"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <!-- Add the service declaration for custom tabs support -->
